Closed
Bug 1791481
Opened 3 years ago
Closed 3 years ago
Perma LulIntegration.unwind_consistency | Value of: nTestsPassed == nTests
Categories
(Firefox Build System :: Toolchains, defect, P5)
Firefox Build System
Toolchains
Tracking
(firefox107 fixed)
RESOLVED
FIXED
107 Branch
| Tracking | Status | |
|---|---|---|
| firefox107 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: glandium)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Filed by: mh [at] glandium.org
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=390880030&repo=toolchains
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/O-W_QxKJQzu-_XrQB6BAKA/runs/0/artifacts/public/logs/live_backing.log
[task 2022-09-20T00:16:28.211Z] 00:16:28 WARNING - TEST-UNEXPECTED-FAIL | LulIntegration.unwind_consistency | Value of: nTestsPassed == nTests
[task 2022-09-20T00:16:28.211Z] 00:16:28 INFO - Actual: false
[task 2022-09-20T00:16:28.211Z] 00:16:28 INFO - Expected: true
[task 2022-09-20T00:16:28.211Z] 00:16:28 INFO - Not all tests passed @ /builds/worker/checkouts/gecko/tools/profiler/tests/gtest/LulTest.cpp:48
This is a regression from https://github.com/llvm/llvm-project/commit/2e37557fdeed381e8e790e20702ededb13c9cef3
| Assignee | ||
Comment 1•3 years ago
|
||
While here, change the gtest to display how many tests passed.
Updated•3 years ago
|
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/6647788079cf
Avoid tail-call optimization of call to GetAndCheckStackTrace. r=mstange
Comment 5•3 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox107:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•