Bug 1791481 - Avoid tail-call optimization of call to GetAndCheckStackTrace. r=mstange

While here, change the gtest to display how many tests passed.

Differential Revision: https://phabricator.services.mozilla.com/D157888